A4/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    DELEGATE
    MINUSEQUAL
    BREAK
    LAMBDADEC
    AND
    ARROW
    VOID
    SIZEOF
    ENUM
    LE
    VIRTUAL
    IN
    NULL
    FIXED
    PARAMS
    STACKALLOC
    LOCK
    PREPROCESSOR
    XOREQUAL
    DECIMAL
    TRUE
    CATCH
    THIS
    OBJECT
    PLUSEQUAL
    FINALLY
    RSHIFTEQUAL
    SHORT
    OVERRIDE
    DEFAULT
    OPERATOR
    IS
    OREQUAL
    BOOL
    SEALED
    NEWLINE
    UINT
    ABSTRACT
    FOREACH
    GE
    CONDMEMBACCESS
    STATIC
    LSHIFTEQUAL
    XOR
    CONDOP
    BYTE
    SBYTE
    CONST
    LONG
    MEMBERACCESS
    EXTERN
    CHECKED
    INTERNAL
    PRIVATE
    CASE
    USING
    ULONG
    MODEQUAL
    PUBLIC
    GOTO
    AS
    STRING
    BASE
    PROTECTED
    ANDEQUAL
    COMMENT
    DIVEQUAL
    IMPLICIT
    SWITCH
    TRY
    NEW
    COLON
    THROW
    TYPEOF
    CONTINUE
    UNCHECKED
    DOUBLE
    READONLY
    UNSAFE
    TIMESEQUAL
    VOLATILE
    STRUCT
    REF
    OUT
    USHORT
    EXPLICIT
    OR
    FALSE
    DO

Grammar

Rule 0     S' -> compilation_unit
Rule 1     type -> non_array_type
Rule 2     type -> array_type
Rule 3     non_array_type -> simple_type
Rule 4     simple_type -> primitive_type
Rule 5     primitive_type -> numeric_type
Rule 6     numeric_type -> integral_type
Rule 7     numeric_type -> floating_point_type
Rule 8     integral_type -> INT
Rule 9     integral_type -> CHAR
Rule 10    floating_point_type -> FLOAT
Rule 11    array_type -> simple_type LBRACKET RBRACKET
Rule 12    argument_list -> argument
Rule 13    argument_list -> argument_list COMMA argument
Rule 14    argument -> expression
Rule 15    primary_expression -> parenthesized_expression
Rule 16    primary_expression -> primary_expression_no_parenthesis
Rule 17    primary_expression_no_parenthesis -> literal
Rule 18    primary_expression_no_parenthesis -> invocation_expression
Rule 19    primary_expression_no_parenthesis -> element_access
Rule 20    primary_expression_no_parenthesis -> IDENTIFIER
Rule 21    literal -> INTCONST
Rule 22    literal -> STRCONST
Rule 23    literal -> CHCONST
Rule 24    parenthesized_expression -> LPAREN expression RPAREN
Rule 25    invocation_expression -> IDENTIFIER LPAREN argument_list_opt RPAREN
Rule 26    argument_list_opt -> empty
Rule 27    argument_list_opt -> argument_list
Rule 28    element_access -> IDENTIFIER LBRACKET expression RBRACKET
Rule 29    postfix_expression -> primary_expression
Rule 30    unary_expression_not_plusminus -> postfix_expression
Rule 31    unary_expression_not_plusminus -> LNOT unary_expression
Rule 32    unary_expression_not_plusminus -> NOT unary_expression
Rule 33    pre_increment_expression -> INCREMENT unary_expression
Rule 34    pre_decrement_expression -> DECREMENT unary_expression
Rule 35    unary_expression -> unary_expression_not_plusminus
Rule 36    unary_expression -> PLUS unary_expression
Rule 37    unary_expression -> MINUS unary_expression
Rule 38    unary_expression -> pre_increment_expression
Rule 39    unary_expression -> pre_decrement_expression
Rule 40    multiplicative_expression -> unary_expression
Rule 41    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 42    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 43    multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 44    additive_expression -> multiplicative_expression
Rule 45    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 46    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 47    shift_expression -> additive_expression
Rule 48    shift_expression -> shift_expression LSHIFT additive_expression
Rule 49    shift_expression -> shift_expression RSHIFT additive_expression
Rule 50    relational_expression -> shift_expression
Rule 51    relational_expression -> relational_expression LT shift_expression
Rule 52    relational_expression -> relational_expression GT shift_expression
Rule 53    equality_expression -> relational_expression
Rule 54    equality_expression -> equality_expression EQ relational_expression
Rule 55    equality_expression -> equality_expression NE relational_expression
Rule 56    and_expression -> equality_expression
Rule 57    exclusive_or_expression -> and_expression
Rule 58    inclusive_or_expression -> exclusive_or_expression
Rule 59    conditional_and_expression -> inclusive_or_expression
Rule 60    conditional_and_expression -> conditional_and_expression CAND inclusive_or_expression
Rule 61    conditional_or_expression -> conditional_and_expression
Rule 62    conditional_or_expression -> conditional_or_expression COR conditional_and_expression
Rule 63    conditional_expression -> conditional_or_expression
Rule 64    assignment -> unary_expression assignment_operator expression
Rule 65    assignment_operator -> EQUALS
Rule 66    expression -> conditional_expression
Rule 67    expression -> assignment
Rule 68    boolean_expression -> expression
Rule 69    statement -> declaration_statement
Rule 70    statement -> embedded_statement
Rule 71    embedded_statement -> block
Rule 72    embedded_statement -> expression_statement
Rule 73    embedded_statement -> selection_statement
Rule 74    embedded_statement -> iteration_statement
Rule 75    embedded_statement -> jump_statement
Rule 76    block -> LBRACE begin_scope statement_list_opt RBRACE
Rule 77    statement_list_opt -> empty
Rule 78    statement_list_opt -> statement_list
Rule 79    statement_list -> statement
Rule 80    statement_list -> statement_list statement
Rule 81    declaration_statement -> local_variable_declaration STMT_TERMINATOR
Rule 82    local_variable_declaration -> type variable_declarators
Rule 83    variable_declarators -> variable_declarator
Rule 84    variable_declarators -> variable_declarators COMMA variable_declarator
Rule 85    variable_declarator -> IDENTIFIER
Rule 86    variable_declarator -> IDENTIFIER EQUALS variable_initializer
Rule 87    variable_initializer -> expression
Rule 88    variable_initializer -> array_initializer
Rule 89    array_initializer -> LBRACE variable_initializer_list RBRACE
Rule 90    variable_initializer_list -> variable_initializer
Rule 91    variable_initializer_list -> variable_initializer_list COMMA variable_initializer
Rule 92    expression_statement -> statement_expression STMT_TERMINATOR
Rule 93    statement_expression -> invocation_expression
Rule 94    statement_expression -> assignment
Rule 95    statement_expression -> pre_increment_expression
Rule 96    statement_expression -> pre_decrement_expression
Rule 97    selection_statement -> if_statement
Rule 98    if_statement -> IF LPAREN boolean_expression RPAREN embedded_statement
Rule 99    if_statement -> IF LPAREN boolean_expression RPAREN embedded_statement ELSE embedded_statement
Rule 100   iteration_statement -> while_statement
Rule 101   iteration_statement -> for_statement
Rule 102   while_statement -> WHILE LPAREN boolean_expression RPAREN embedded_statement
Rule 103   for_statement -> FOR LPAREN for_initializer STMT_TERMINATOR for_condition STMT_TERMINATOR for_iterator RPAREN embedded_statement
Rule 104   for_initializer -> local_variable_declaration
Rule 105   for_initializer -> statement_expression_list
Rule 106   for_condition -> boolean_expression
Rule 107   for_iterator -> statement_expression_list
Rule 108   statement_expression_list -> statement_expression
Rule 109   statement_expression_list -> statement_expression_list COMMA statement_expression
Rule 110   jump_statement -> return_statement
Rule 111   return_statement -> RETURN expression_opt STMT_TERMINATOR
Rule 112   expression_opt -> empty
Rule 113   expression_opt -> expression
Rule 114   compilation_unit -> namespace_declaration
Rule 115   namespace_member_declarations_opt -> empty
Rule 116   namespace_member_declarations_opt -> namespace_member_declarations
Rule 117   namespace_declaration -> NAMESPACE IDENTIFIER namespace_body
Rule 118   namespace_body -> LBRACE namespace_member_declarations_opt RBRACE
Rule 119   namespace_member_declarations -> namespace_member_declaration
Rule 120   namespace_member_declaration -> type_declaration
Rule 121   type_declaration -> class_declaration
Rule 122   class_declaration -> CLASS IDENTIFIER class_body
Rule 123   class_body -> LBRACE class_member_declarations_opt RBRACE
Rule 124   class_member_declarations_opt -> empty
Rule 125   class_member_declarations_opt -> class_member_declarations
Rule 126   class_member_declarations -> class_member_declaration
Rule 127   class_member_declarations -> class_member_declarations class_member_declaration
Rule 128   class_member_declaration -> field_declaration
Rule 129   class_member_declaration -> method_declaration
Rule 130   field_declaration -> type variable_declarators STMT_TERMINATOR
Rule 131   method_declaration -> method_header method_body
Rule 132   method_header -> type IDENTIFIER LPAREN formal_parameter_list_opt RPAREN
Rule 133   formal_parameter_list_opt -> empty
Rule 134   formal_parameter_list_opt -> formal_parameter_list
Rule 135   method_body -> block
Rule 136   formal_parameter_list -> formal_parameter
Rule 137   formal_parameter_list -> formal_parameter_list COMMA formal_parameter
Rule 138   formal_parameter -> type IDENTIFIER
Rule 139   begin_scope -> empty
Rule 140   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 
ANDEQUAL             : 
ARROW                : 
AS                   : 
BASE                 : 
BOOL                 : 
BREAK                : 
BYTE                 : 
CAND                 : 60
CASE                 : 
CATCH                : 
CHAR                 : 9
CHCONST              : 23
CHECKED              : 
CLASS                : 122
COLON                : 
COMMA                : 13 84 91 109 137
COMMENT              : 
CONDMEMBACCESS       : 
CONDOP               : 
CONST                : 
CONTINUE             : 
COR                  : 62
DECIMAL              : 
DECREMENT            : 34
DEFAULT              : 
DELEGATE             : 
DIVEQUAL             : 
DIVIDE               : 42
DO                   : 
DOUBLE               : 
ELSE                 : 99
ENUM                 : 
EQ                   : 54
EQUALS               : 65 86
EXPLICIT             : 
EXTERN               : 
FALSE                : 
FINALLY              : 
FIXED                : 
FLOAT                : 10
FOR                  : 103
FOREACH              : 
GE                   : 
GOTO                 : 
GT                   : 52
IDENTIFIER           : 20 25 28 85 86 117 122 132 138
IF                   : 98 99
IMPLICIT             : 
IN                   : 
INCREMENT            : 33
INT                  : 8
INTCONST             : 21
INTERNAL             : 
IS                   : 
LAMBDADEC            : 
LBRACE               : 76 89 118 123
LBRACKET             : 11 28
LE                   : 
LNOT                 : 31
LOCK                 : 
LONG                 : 
LPAREN               : 24 25 98 99 102 103 132
LSHIFT               : 48
LSHIFTEQUAL          : 
LT                   : 51
MEMBERACCESS         : 
MINUS                : 37 46
MINUSEQUAL           : 
MOD                  : 43
MODEQUAL             : 
NAMESPACE            : 117
NE                   : 55
NEW                  : 
NEWLINE              : 
NOT                  : 32
NULL                 : 
OBJECT               : 
OPERATOR             : 
OR                   : 
OREQUAL              : 
OUT                  : 
OVERRIDE             : 
PARAMS               : 
PLUS                 : 36 45
PLUSEQUAL            : 
PREPROCESSOR         : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACE               : 76 89 118 123
RBRACKET             : 11 28
READONLY             : 
REF                  : 
RETURN               : 111
RPAREN               : 24 25 98 99 102 103 132
RSHIFT               : 49
RSHIFTEQUAL          : 
SBYTE                : 
SEALED               : 
SHORT                : 
SIZEOF               : 
STACKALLOC           : 
STATIC               : 
STMT_TERMINATOR      : 81 92 103 103 111 130
STRCONST             : 22
STRING               : 
STRUCT               : 
SWITCH               : 
THIS                 : 
THROW                : 
TIMES                : 41
TIMESEQUAL           : 
TRUE                 : 
TRY                  : 
TYPEOF               : 
UINT                 : 
ULONG                : 
UNCHECKED            : 
UNSAFE               : 
USHORT               : 
USING                : 
VIRTUAL              : 
VOID                 : 
VOLATILE             : 
WHILE                : 102
XOR                  : 
XOREQUAL             : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 45 46 47 48 49
and_expression       : 57
argument             : 12 13
argument_list        : 13 27
argument_list_opt    : 25
array_initializer    : 88
array_type           : 2
assignment           : 67 94
assignment_operator  : 64
begin_scope          : 76
block                : 71 135
boolean_expression   : 98 99 102 106
class_body           : 122
class_declaration    : 121
class_member_declaration : 126 127
class_member_declarations : 125 127
class_member_declarations_opt : 123
compilation_unit     : 0
conditional_and_expression : 60 61 62
conditional_expression : 66
conditional_or_expression : 62 63
declaration_statement : 69
element_access       : 19
embedded_statement   : 70 98 99 99 102 103
empty                : 26 77 112 115 124 133 139
equality_expression  : 54 55 56
exclusive_or_expression : 58
expression           : 14 24 28 64 68 87 113
expression_opt       : 111
expression_statement : 72
field_declaration    : 128
floating_point_type  : 7
for_condition        : 103
for_initializer      : 103
for_iterator         : 103
for_statement        : 101
formal_parameter     : 136 137
formal_parameter_list : 134 137
formal_parameter_list_opt : 132
if_statement         : 97
inclusive_or_expression : 59 60
integral_type        : 6
invocation_expression : 18 93
iteration_statement  : 74
jump_statement       : 75
literal              : 17
local_variable_declaration : 81 104
method_body          : 131
method_declaration   : 129
method_header        : 131
multiplicative_expression : 41 42 43 44 45 46
namespace_body       : 117
namespace_declaration : 114
namespace_member_declaration : 119
namespace_member_declarations : 116
namespace_member_declarations_opt : 118
non_array_type       : 1
numeric_type         : 5
parenthesized_expression : 15
postfix_expression   : 30
pre_decrement_expression : 39 96
pre_increment_expression : 38 95
primary_expression   : 29
primary_expression_no_parenthesis : 16
primitive_type       : 4
relational_expression : 51 52 53 54 55
return_statement     : 110
selection_statement  : 73
shift_expression     : 48 49 50 51 52
simple_type          : 3 11
statement            : 79 80
statement_expression : 92 108 109
statement_expression_list : 105 107 109
statement_list       : 78 80
statement_list_opt   : 76
type                 : 82 130 132 138
type_declaration     : 120
unary_expression     : 31 32 33 34 36 37 40 41 42 43 64
unary_expression_not_plusminus : 35
variable_declarator  : 83 84
variable_declarators : 82 84 130
variable_initializer : 86 90 91
variable_initializer_list : 89 91
while_statement      : 100

Parsing method: LALR

state 0

    (0) S' -> . compilation_unit
    (114) compilation_unit -> . namespace_declaration
    (117) namespace_declaration -> . NAMESPACE IDENTIFIER namespace_body

    NAMESPACE       shift and go to state 3

    namespace_declaration          shift and go to state 1
    compilation_unit               shift and go to state 2

state 1

    (114) compilation_unit -> namespace_declaration .

    $end            reduce using rule 114 (compilation_unit -> namespace_declaration .)


state 2

    (0) S' -> compilation_unit .



state 3

    (117) namespace_declaration -> NAMESPACE . IDENTIFIER namespace_body

    IDENTIFIER      shift and go to state 4


state 4

    (117) namespace_declaration -> NAMESPACE IDENTIFIER . namespace_body
    (118) namespace_body -> . LBRACE namespace_member_declarations_opt RBRACE

    LBRACE          shift and go to state 6

    namespace_body                 shift and go to state 5

state 5

    (117) namespace_declaration -> NAMESPACE IDENTIFIER namespace_body .

    $end            reduce using rule 117 (namespace_declaration -> NAMESPACE IDENTIFIER namespace_body .)


state 6

    (118) namespace_body -> LBRACE . namespace_member_declarations_opt RBRACE
    (115) namespace_member_declarations_opt -> . empty
    (116) namespace_member_declarations_opt -> . namespace_member_declarations
    (140) empty -> .
    (119) namespace_member_declarations -> . namespace_member_declaration
    (120) namespace_member_declaration -> . type_declaration
    (121) type_declaration -> . class_declaration
    (122) class_declaration -> . CLASS IDENTIFIER class_body

    RBRACE          reduce using rule 140 (empty -> .)
    CLASS           shift and go to state 11

    empty                          shift and go to state 7
    type_declaration               shift and go to state 8
    namespace_member_declaration   shift and go to state 9
    namespace_member_declarations  shift and go to state 10
    class_declaration              shift and go to state 12
    namespace_member_declarations_opt shift and go to state 13

state 7

    (115) namespace_member_declarations_opt -> empty .

    RBRACE          reduce using rule 115 (namespace_member_declarations_opt -> empty .)


state 8

    (120) namespace_member_declaration -> type_declaration .

    RBRACE          reduce using rule 120 (namespace_member_declaration -> type_declaration .)


state 9

    (119) namespace_member_declarations -> namespace_member_declaration .

    RBRACE          reduce using rule 119 (namespace_member_declarations -> namespace_member_declaration .)


state 10

    (116) namespace_member_declarations_opt -> namespace_member_declarations .

    RBRACE          reduce using rule 116 (namespace_member_declarations_opt -> namespace_member_declarations .)


state 11

    (122) class_declaration -> CLASS . IDENTIFIER class_body

    IDENTIFIER      shift and go to state 14


state 12

    (121) type_declaration -> class_declaration .

    RBRACE          reduce using rule 121 (type_declaration -> class_declaration .)


state 13

    (118) namespace_body -> LBRACE namespace_member_declarations_opt . RBRACE

    RBRACE          shift and go to state 15


state 14

    (122) class_declaration -> CLASS IDENTIFIER . class_body
    (123) class_body -> . LBRACE class_member_declarations_opt RBRACE

    LBRACE          shift and go to state 16

    class_body                     shift and go to state 17

state 15

    (118) namespace_body -> LBRACE namespace_member_declarations_opt RBRACE .

    $end            reduce using rule 118 (namespace_body -> LBRACE namespace_member_declarations_opt RBRACE .)


state 16

    (123) class_body -> LBRACE . class_member_declarations_opt RBRACE
    (124) class_member_declarations_opt -> . empty
    (125) class_member_declarations_opt -> . class_member_declarations
    (140) empty -> .
    (126) class_member_declarations -> . class_member_declaration
    (127) class_member_declarations -> . class_member_declarations class_member_declaration
    (128) class_member_declaration -> . field_declaration
    (129) class_member_declaration -> . method_declaration
    (130) field_declaration -> . type variable_declarators STMT_TERMINATOR
    (131) method_declaration -> . method_header method_body
    (1) type -> . non_array_type
    (2) type -> . array_type
    (132) method_header -> . type IDENTIFIER LPAREN formal_parameter_list_opt RPAREN
    (3) non_array_type -> . simple_type
    (11) array_type -> . simple_type LBRACKET RBRACKET
    (4) simple_type -> . primitive_type
    (5) primitive_type -> . numeric_type
    (6) numeric_type -> . integral_type
    (7) numeric_type -> . floating_point_type
    (8) integral_type -> . INT
    (9) integral_type -> . CHAR
    (10) floating_point_type -> . FLOAT

    RBRACE          reduce using rule 140 (empty -> .)
    INT             shift and go to state 23
    CHAR            shift and go to state 34
    FLOAT           shift and go to state 20

    class_member_declarations_opt  shift and go to state 18
    field_declaration              shift and go to state 28
    empty                          shift and go to state 21
    floating_point_type            shift and go to state 22
    class_member_declaration       shift and go to state 31
    array_type                     shift and go to state 29
    class_member_declarations      shift and go to state 24
    method_header                  shift and go to state 25
    simple_type                    shift and go to state 26
    numeric_type                   shift and go to state 33
    method_declaration             shift and go to state 19
    primitive_type                 shift and go to state 32
    type                           shift and go to state 27
    non_array_type                 shift and go to state 30
    integral_type                  shift and go to state 35

state 17

    (122) class_declaration -> CLASS IDENTIFIER class_body .

    RBRACE          reduce using rule 122 (class_declaration -> CLASS IDENTIFIER class_body .)


state 18

    (123) class_body -> LBRACE class_member_declarations_opt . RBRACE

    RBRACE          shift and go to state 36


state 19

    (129) class_member_declaration -> method_declaration .

    INT             reduce using rule 129 (class_member_declaration -> method_declaration .)
    CHAR            reduce using rule 129 (class_member_declaration -> method_declaration .)
    FLOAT           reduce using rule 129 (class_member_declaration -> method_declaration .)
    RBRACE          reduce using rule 129 (class_member_declaration -> method_declaration .)


state 20

    (10) floating_point_type -> FLOAT .

    LBRACKET        reduce using rule 10 (floating_point_type -> FLOAT .)
    IDENTIFIER      reduce using rule 10 (floating_point_type -> FLOAT .)


state 21

    (124) class_member_declarations_opt -> empty .

    RBRACE          reduce using rule 124 (class_member_declarations_opt -> empty .)


state 22

    (7) numeric_type -> floating_point_type .

    LBRACKET        reduce using rule 7 (numeric_type -> floating_point_type .)
    IDENTIFIER      reduce using rule 7 (numeric_type -> floating_point_type .)


state 23

    (8) integral_type -> INT .

    LBRACKET        reduce using rule 8 (integral_type -> INT .)
    IDENTIFIER      reduce using rule 8 (integral_type -> INT .)


state 24

    (125) class_member_declarations_opt -> class_member_declarations .
    (127) class_member_declarations -> class_member_declarations . class_member_declaration
    (128) class_member_declaration -> . field_declaration
    (129) class_member_declaration -> . method_declaration
    (130) field_declaration -> . type variable_declarators STMT_TERMINATOR
    (131) method_declaration -> . method_header method_body
    (1) type -> . non_array_type
    (2) type -> . array_type
    (132) method_header -> . type IDENTIFIER LPAREN formal_parameter_list_opt RPAREN
    (3) non_array_type -> . simple_type
    (11) array_type -> . simple_type LBRACKET RBRACKET
    (4) simple_type -> . primitive_type
    (5) primitive_type -> . numeric_type
    (6) numeric_type -> . integral_type
    (7) numeric_type -> . floating_point_type
    (8) integral_type -> . INT
    (9) integral_type -> . CHAR
    (10) floating_point_type -> . FLOAT

    RBRACE          reduce using rule 125 (class_member_declarations_opt -> class_member_declarations .)
    INT             shift and go to state 23
    CHAR            shift and go to state 34
    FLOAT           shift and go to state 20

    field_declaration              shift and go to state 28
    method_declaration             shift and go to state 19
    class_member_declaration       shift and go to state 37
    floating_point_type            shift and go to state 22
    array_type                     shift and go to state 29
    method_header                  shift and go to state 25
    simple_type                    shift and go to state 26
    numeric_type                   shift and go to state 33
    primitive_type                 shift and go to state 32
    type                           shift and go to state 27
    non_array_type                 shift and go to state 30
    integral_type                  shift and go to state 35

state 25

    (131) method_declaration -> method_header . method_body
    (135) method_body -> . block
    (76) block -> . LBRACE begin_scope statement_list_opt RBRACE

    LBRACE          shift and go to state 38

    method_body                    shift and go to state 40
    block                          shift and go to state 39

state 26

    (3) non_array_type -> simple_type .
    (11) array_type -> simple_type . LBRACKET RBRACKET

    IDENTIFIER      reduce using rule 3 (non_array_type -> simple_type .)
    LBRACKET        shift and go to state 41


state 27

    (130) field_declaration -> type . variable_declarators STMT_TERMINATOR
    (132) method_header -> type . IDENTIFIER LPAREN formal_parameter_list_opt RPAREN
    (83) variable_declarators -> . variable_declarator
    (84) variable_declarators -> . variable_declarators COMMA variable_declarator
    (85) variable_declarator -> . IDENTIFIER
    (86) variable_declarator -> . IDENTIFIER EQUALS variable_initializer

    IDENTIFIER      shift and go to state 43

    variable_declarators           shift and go to state 44
    variable_declarator            shift and go to state 42

state 28

    (128) class_member_declaration -> field_declaration .

    INT             reduce using rule 128 (class_member_declaration -> field_declaration .)
    CHAR            reduce using rule 128 (class_member_declaration -> field_declaration .)
    FLOAT           reduce using rule 128 (class_member_declaration -> field_declaration .)
    RBRACE          reduce using rule 128 (class_member_declaration -> field_declaration .)


state 29

    (2) type -> array_type .

    IDENTIFIER      reduce using rule 2 (type -> array_type .)


state 30

    (1) type -> non_array_type .

    IDENTIFIER      reduce using rule 1 (type -> non_array_type .)


state 31

    (126) class_member_declarations -> class_member_declaration .

    INT             reduce using rule 126 (class_member_declarations -> class_member_declaration .)
    CHAR            reduce using rule 126 (class_member_declarations -> class_member_declaration .)
    FLOAT           reduce using rule 126 (class_member_declarations -> class_member_declaration .)
    RBRACE          reduce using rule 126 (class_member_declarations -> class_member_declaration .)


state 32

    (4) simple_type -> primitive_type .

    LBRACKET        reduce using rule 4 (simple_type -> primitive_type .)
    IDENTIFIER      reduce using rule 4 (simple_type -> primitive_type .)


state 33

    (5) primitive_type -> numeric_type .

    LBRACKET        reduce using rule 5 (primitive_type -> numeric_type .)
    IDENTIFIER      reduce using rule 5 (primitive_type -> numeric_type .)


state 34

    (9) integral_type -> CHAR .

    LBRACKET        reduce using rule 9 (integral_type -> CHAR .)
    IDENTIFIER      reduce using rule 9 (integral_type -> CHAR .)


state 35

    (6) numeric_type -> integral_type .

    LBRACKET        reduce using rule 6 (numeric_type -> integral_type .)
    IDENTIFIER      reduce using rule 6 (numeric_type -> integral_type .)


state 36

    (123) class_body -> LBRACE class_member_declarations_opt RBRACE .

    RBRACE          reduce using rule 123 (class_body -> LBRACE class_member_declarations_opt RBRACE .)


state 37

    (127) class_member_declarations -> class_member_declarations class_member_declaration .

    INT             reduce using rule 127 (class_member_declarations -> class_member_declarations class_member_declaration .)
    CHAR            reduce using rule 127 (class_member_declarations -> class_member_declarations class_member_declaration .)
    FLOAT           reduce using rule 127 (class_member_declarations -> class_member_declarations class_member_declaration .)
    RBRACE          reduce using rule 127 (class_member_declarations -> class_member_declarations class_member_declaration .)


state 38

    (76) block -> LBRACE . begin_scope statement_list_opt RBRACE
    (139) begin_scope -> . empty
    (140) empty -> .

    LBRACE          reduce using rule 140 (empty -> .)
    IF              reduce using rule 140 (empty -> .)
    WHILE           reduce using rule 140 (empty -> .)
    FOR             reduce using rule 140 (empty -> .)
    RETURN          reduce using rule 140 (empty -> .)
    IDENTIFIER      reduce using rule 140 (empty -> .)
    INCREMENT       reduce using rule 140 (empty -> .)
    DECREMENT       reduce using rule 140 (empty -> .)
    PLUS            reduce using rule 140 (empty -> .)
    MINUS           reduce using rule 140 (empty -> .)
    LNOT            reduce using rule 140 (empty -> .)
    NOT             reduce using rule 140 (empty -> .)
    INT             reduce using rule 140 (empty -> .)
    CHAR            reduce using rule 140 (empty -> .)
    FLOAT           reduce using rule 140 (empty -> .)
    LPAREN          reduce using rule 140 (empty -> .)
    INTCONST        reduce using rule 140 (empty -> .)
    STRCONST        reduce using rule 140 (empty -> .)
    CHCONST         reduce using rule 140 (empty -> .)
    RBRACE          reduce using rule 140 (empty -> .)

    begin_scope                    shift and go to state 46
    empty                          shift and go to state 45

state 39

    (135) method_body -> block .

    INT             reduce using rule 135 (method_body -> block .)
    CHAR            reduce using rule 135 (method_body -> block .)
    FLOAT           reduce using rule 135 (method_body -> block .)
    RBRACE          reduce using rule 135 (method_body -> block .)


state 40

    (131) method_declaration -> method_header method_body .

    INT             reduce using rule 131 (method_declaration -> method_header method_body .)
    CHAR            reduce using rule 131 (method_declaration -> method_header method_body .)
    FLOAT           reduce using rule 131 (method_declaration -> method_header method_body .)
    RBRACE          reduce using rule 131 (method_declaration -> method_header method_body .)


state 41

    (11) array_type -> simple_type LBRACKET . RBRACKET

    RBRACKET        shift and go to state 47


state 42

    (83) variable_declarators -> variable_declarator .

    COMMA           reduce using rule 83 (variable_declarators -> variable_declarator .)
    STMT_TERMINATOR reduce using rule 83 (variable_declarators -> variable_declarator .)


state 43

    (132) method_header -> type IDENTIFIER . LPAREN formal_parameter_list_opt RPAREN
    (85) variable_declarator -> IDENTIFIER .
    (86) variable_declarator -> IDENTIFIER . EQUALS variable_initializer

    LPAREN          shift and go to state 48
    STMT_TERMINATOR reduce using rule 85 (variable_declarator -> IDENTIFIER .)
    COMMA           reduce using rule 85 (variable_declarator -> IDENTIFIER .)
    EQUALS          shift and go to state 49


state 44

    (130) field_declaration -> type variable_declarators . STMT_TERMINATOR
    (84) variable_declarators -> variable_declarators . COMMA variable_declarator

    STMT_TERMINATOR shift and go to state 50
    COMMA           shift and go to state 51


state 45

    (139) begin_scope -> empty .

    LBRACE          reduce using rule 139 (begin_scope -> empty .)
    IF              reduce using rule 139 (begin_scope -> empty .)
    WHILE           reduce using rule 139 (begin_scope -> empty .)
    FOR             reduce using rule 139 (begin_scope -> empty .)
    RETURN          reduce using rule 139 (begin_scope -> empty .)
    IDENTIFIER      reduce using rule 139 (begin_scope -> empty .)
    INCREMENT       reduce using rule 139 (begin_scope -> empty .)
    DECREMENT       reduce using rule 139 (begin_scope -> empty .)
    PLUS            reduce using rule 139 (begin_scope -> empty .)
    MINUS           reduce using rule 139 (begin_scope -> empty .)
    LNOT            reduce using rule 139 (begin_scope -> empty .)
    NOT             reduce using rule 139 (begin_scope -> empty .)
    INT             reduce using rule 139 (begin_scope -> empty .)
    CHAR            reduce using rule 139 (begin_scope -> empty .)
    FLOAT           reduce using rule 139 (begin_scope -> empty .)
    LPAREN          reduce using rule 139 (begin_scope -> empty .)
    INTCONST        reduce using rule 139 (begin_scope -> empty .)
    STRCONST        reduce using rule 139 (begin_scope -> empty .)
    CHCONST         reduce using rule 139 (begin_scope -> empty .)
    RBRACE          reduce using rule 139 (begin_scope -> empty .)


state 46
